Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/RefEqual.out
RefEqual.java:13:26: compiler.err.incomparable.types: java.lang.Class<java.lang.String>, java.lang.Class<java.lang.Integer>
1 error
